--- a/CaseStudyUnit6_RMarkdown.Rmd
+++ b/CaseStudyUnit6_RMarkdown.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "EShawCaseStudyUnit6"
 author: "Earl Shaw"
-date: "June 12, 2016"
+date: "June 20, 2016"
 output: html_document
 ---
 
@@ -10,9 +10,9 @@ knitr::opts_chunk$set(echo = TRUE)
 #Introduction
 ##This RMarkdown document uses Gross Domestic Product (GDP) data on 190 ranked countries along with educational data as a basis for analyzing and comparing a variety of economic and educational factors within and across countries. 
 
-#Data Notes
+#Data Notes:
 ##GDP data was obtained from the following source: https://d396qusza40orc.cloudfront.net/getdata%2Fdata%2FGDP.csv. 
-##Educational data data was obtained from the following source: https://d396qusza40orc.cloudfront.net/getdata%2Fdata%2FEDSTATS_Country.csv. Each of these data sources was downloaded to a PC locally. The data sets were modified in Microsoft Excel to include only the data and "human readable" variable/header names. The GDP data variable names were updated to: "CountryCode", "Ranking", "Economy", "US_Dollars", respectively. For the education data, no changes were made to the variable names. All other information contained in the Microsoft Excel file was removed. Additionally, a blank column was removed between the variable columns: "Ranking" and "Economy" and a blank row was removed between the lowest ranked country, i.e. "Tuvalu" and the non-ranked country: "American Samoa". Missing values in the "Ranking" variable were left as a "blank space" and missing values in the "US Dollars" variable were updated with a "blank space" instead of the ".." value. Both files were saved as "gdp_data" and "education_data" locally as .csv files to the cloned Github repository: https://github.com/eshaw1/CaseStudyUnit6. 
+##Educational data was obtained from the following source: https://d396qusza40orc.cloudfront.net/getdata%2Fdata%2FEDSTATS_Country.csv. Each of these data sources was downloaded to a PC locally. The data sets were modified in Microsoft Excel to include only the data and "human readable" variable/header names. The GDP data variable names were updated to: "CountryCode", "Ranking", "Economy", and "US_dollars", respectively. Additionally, the "US_dollars" column was formatted as "General" in Microsoft Excel while other variable formats were left unchanged. All information except the variables and the associated data for each was removed. For the education data, no changes were made to the variable names. All other information contained in the Microsoft Excel file except for the variables and the associatted data was removed. Additionally, a blank column was removed between the variable columns: "Ranking" and "Economy" and a blank row was removed between the lowest ranked country, i.e. "Tuvalu" and the non-ranked country: "American Samoa". Missing values in the "Ranking" variable were left as a "blank space" and missing values in the "US_dollars" variable were updated with a "blank space" instead of the ".." value. Both files were saved as "gdp_data" and "education_data" locally as .csv files to the cloned Github repository: https://github.com/eshaw1/CaseStudyUnit6. 
 ##For the GDP Data, rankings include only those economies with confirmed GDP estimates. Several notes regarding economies of specific countries includes:
 ###a. Morocco economy includes Former Spanish Sahara.  
 ###b. Sudan economy excludes South Sudan.  
@@ -38,7 +38,10 @@ dim(education)
 
 ##Merging GDP and Education data sets together using the country shortcode
 gdp_educ <- merge(gdp, education, by="CountryCode")
+
+##---------------------------------------------------------------------------------------------------------
 #Question #1: Match the data based on the country shortcode. How many of the IDs match? --> 210 ID's match
+##---------------------------------------------------------------------------------------------------------
 
 ##Determining the number of missing values for the "GDP Rank" variable
 #Loading the "plyr" package to use the "count" function
@@ -64,28 +67,53 @@ dim(na_ranking_2)
 ##count(gdp_educ_2,"Ranking") --> Not using currently
 ##count(gdp_educ_2,"US_dollars") --> Not using currently
 
-##Determining the dimensions of the merged data set with missing values removed, i.e. "gdp_educ_2""; 189 rows, 34 columns
-dim(gdp_educ_2)
+##Creating new data frame with only variables needed
+gdp_educ_3 = subset(gdp_educ_2,select=c(CountryCode,Ranking,US_dollars,Income.Group))
+
+##Determining the dimensions of the merged data set with missing values removed, i.e. "gdp_educ_3""; 189 rows, 34 columns
+dim(gdp_educ_3)
 
 ##Sorting the data frame in ascending order by GDP rank
-sort_gdp_educ_rank <- gdp_educ_2[order(-gdp_educ_2$Ranking),]
+sort_gdp_educ_rank <- gdp_educ_3[order(-gdp_educ_3$Ranking),]
+
+##--------------------------------------------------------------------------------------------------------------------------------------------------------
 #Question #2: Sort the data frame in ascending order by GDP rank (so United States is last). What is the 13th country in the resulting data frame? --> St. Kitts and Nevis is the 13th country
+##--------------------------------------------------------------------------------------------------------------------------------------------------------
 
 ##Determining the the average GDP Ranking by the variable "Income.Group"
-aggregate(Ranking~Income.Group,gdp_educ_2,mean)
+aggregate(Ranking~Income.Group,gdp_educ_3,mean)
+
+##-----------------------------------------------------------------------------------------------------------------------------------------------------
 #Question #3: What are the average GDP rankings for the "High income: OECD" and "High income: nonOECD" groups? -->High income: OECD=32.97; High income: nonOECD=91.91
+##-----------------------------------------------------------------------------------------------------------------------------------------------------
 
 #Loading "ggplot" library to provide additional functions for plotting data
 library(ggplot2)
-plot(gdp_educ_2$Income.Group,gdp_educ_2$US_dollars)
-#Question #4: Plot the GDP for all countries. Use ggplot2 to color your plot by Income Group. ??
+#Determining average GDP by Income.Group
+gdp_by_group<-aggregate(US_dollars~Income.Group,gdp_educ_3,mean)
+#Plotting average GDP by Income Group; "y-axis" units are in "$, Million".
+ggplot(gdp_by_group,aes(x=Income.Group,y=US_dollars))+geom_point(aes(x=Income.Group,color=Income.Group))
+
+#Creating new variable: "US_dollars_2"
+gdp_educ_3[["US_dollars_2"]]<-gdp_educ_3$US_dollars/1000000
+##Plotting GDP by Income.Group-"x-axis" units are in $, Trillion
+ggplot(gdp_educ_3,aes(x=US_dollars_2,y=Income.Group))+geom_point(color="blue")
+
+##-------------------------------------------------------------------------------------------
+#Question #4: Plot the GDP for all countries. Use ggplot2 to color your plot by Income Group.
+##-------------------------------------------------------------------------------------------
 
 ##Cutting the GDP Ranking into 5 separate quantile groups.
-gdp_educ_cuts<-cut(gdp_educ_2$Ranking,breaks=c(1,40,80,120,160,190),labels=c("Q1","Q2","Q3","Q4","Q5"))
+gdp_educ_cuts<-cut(gdp_educ_3$Ranking,breaks=c(1,40,80,120,160,190),labels=c("Q1","Q2","Q3","Q4","Q5"))
 
 ##Creating a table using the cuts versus Income.Group
-table(gdp_educ_cuts,gdp_educ_2$Income.Group)
-#Question #5: How many countries are Lower middle income but among the 38 nations with highest GDP? --> 6
+table(gdp_educ_cuts,gdp_educ_3$Income.Group)
 
-#Conclusion: In this exercise, it was determined that High Income OECD countries rank the highest in regards to GDP.
+##-------------------------------------------------------------------------------------------------------
+#Question #5: How many countries are Lower middle income but among the 38 nations with highest GDP? --> 6
+##-------------------------------------------------------------------------------------------------------
+
+##-----------------------------------------------------------------------------------------------------------------------------------------------------------
+#Conclusion: In this exercise, it was determined that High Income OECD countries rank the highest in regards to GDP. All together, average GDP is ~$379B, the lowest GDP is $40M, median GDP is ~$28.2B, while the highest GDP is ~$16.2T. Interestingly, average GDP in the "Lower Middle Income" group is slightly higher than in the "Upper Middle Income" group. While the High Income groups, i.e. "OECD" vs "Non-OECD" differ by ~$1.3T, a striking contrast.
+##-----------------------------------------------------------------------------------------------------------------------------------------------------------
 ```
